<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/registrationParent"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".views.authentication.RegistrationActivity">

  <TextView
    android:id="@+id/message"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="Register to continue"
    android:textColor="@color/colorPrimary"
    android:textSize="24sp"
    android:textAllCaps="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.00999999"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/firstName"
    android:layout_width="300dp"
    android:textColor="@color/colorPrimary"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="First Name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/message">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/signupFirstNameField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/lastName"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="Last Name"
    android:textColor="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="@+id/firstName"
    app:layout_constraintStart_toStartOf="@+id/firstName"
    app:layout_constraintTop_toBottomOf="@+id/firstName">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/signupLastNameField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/email"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="Email"
    android:textColor="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="@+id/firstName"
    app:layout_constraintStart_toStartOf="@+id/firstName"
    app:layout_constraintTop_toBottomOf="@+id/lastName">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/signupEmailField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/password"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="Password"
    android:textColor="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="@+id/firstName"
    app:layout_constraintStart_toStartOf="@+id/firstName"
    app:layout_constraintTop_toBottomOf="@+id/email">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/signupPasswordField"
      android:layout_width="match_parent"
      android:inputType="textPassword"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <TextView
    android:id="@+id/loginText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="Have an account? Login"
    android:textColor="@color/colorPrimary"
    android:textSize="14sp"
    app:layout_constraintEnd_toEndOf="@+id/firstName"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/firstName"
    app:layout_constraintTop_toBottomOf="@+id/password"/>

  <Button
    android:id="@+id/registerButton"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/colorPrimary"
    android:text="Register"
    android:textColor="#FFF"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/firstName"
    app:layout_constraintStart_toStartOf="@+id/firstName"
    app:layout_constraintTop_toBottomOf="@+id/loginText"/>

</android.support.constraint.ConstraintLayout>
