<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/loginContainer"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".views.authentication.LoginFragment">

  <TextView
    android:id="@+id/message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:text="Login to Continue"
    android:textAllCaps="true"
    android:textColor="@color/colorPrimary"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.107"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/loginEmail"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:hint="Email"
    android:textColor="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/message">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/loginEmailField"
      android:layout_width="match_parent"
      android:textColor="@color/colorPrimary"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/loginPassword"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="Password"
    android:textColor="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="@+id/loginEmail"
    app:layout_constraintStart_toStartOf="@+id/loginEmail"
    app:layout_constraintTop_toBottomOf="@+id/loginEmail">
    <android.support.design.widget.TextInputEditText
      android:id="@+id/loginPasswordField"
      android:inputType="textPassword"
      android:textColor="@color/colorPrimary"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  </android.support.design.widget.TextInputLayout>

  <TextView
    android:id="@+id/signupText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:text="Don't have an account? Register!"
    android:textColor="@color/colorPrimary"
    android:textSize="14sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/loginPassword"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="@+id/loginPassword"
    app:layout_constraintTop_toBottomOf="@+id/loginPassword"
    app:layout_constraintVertical_bias="0.086"/>

  <Button
    android:id="@+id/loginButton"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:backgroundTint="@color/colorPrimary"
    android:text="Log In"
    android:textColor="#FFF"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/loginPassword"
    app:layout_constraintStart_toStartOf="@+id/loginPassword"
    app:layout_constraintTop_toBottomOf="@+id/loginPassword"/>


</android.support.constraint.ConstraintLayout>